[package]
name = "hme_bridge"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
worker = "0.6.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
chrono = { version = "0.4.41", features = ["serde"] }
rand = "0.9.2"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
tracing = "0.1.41"
tracing-web = "0.1.3"
url = "2.5.6"
wasm-bindgen = "0.2.100"
